--- a/src/App.css
+++ b/src/App.css
@@ -83,3 +83,18 @@
     width:90%
   }
 }
+/* .links{ */
+  /* text-Decoration:'none' !important; */
+  /* color: red;
+} */
+/* .links:hover{
+  color: yellow !important;
+  font-weight: bold !important;
+}
+.links:focus{
+  color: red !important;
+  text-decoration: underline !important;
+} */
+.active{
+  color:red !important;
+}
